--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint \"src/**/*.ts\" --cache",
     "lint:fix": "eslint \"src/**/*.ts\" --cache --fix",
     "build": "tsc",
+    "build:pack": "webpack",
     "test": "jest",
     "prepare": "npm run build"
   },
@@ -34,7 +35,10 @@
     "eslint-plugin-jsdoc": "^32.3.4",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
-    "typescript": "^4.2.4"
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   },
   "homepage": "https://github.com/lublak/pdfdataextract#readme",
   "bugs": {
